# eqapo-gui

./: .gitignore  CLAUDE.md  README.md  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
.agent/: rules.md
.claude/: settings.local.json
.claude/agents/: rust-reviewer.md
.claude/skills/ab-testing-statistician/references/: experimental_design.md  sample_size_calculator.md  statistical_tests.md
.claude/skills/audio-dsp-reviewer/references/: filter_types.md  rbj_cookbook.md  test_cases.md
.claude/skills/eqapo-format-expert/references/: eapo_spec.md  examples.md  filter_types.md
.claude/skills/react-component-developer/references/: accessibility.md  react_19_features.md  shadcn_examples.md
.claude/skills/rust-code-reviewer/references/: anti_patterns.md  performance_tips.md  rust_patterns.md
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/ab-test/: page.tsx
components/: audio-status-panel.tsx  band-editor.tsx  eq-graph.tsx  mode-toggle.tsx  peak-meter.tsx  preamp-control.tsx  profile-selector.tsx  setup-dialog.tsx
components/ui/: dropdown-menu.tsx  sync-indicator.tsx
docs/: AGENTS.md  VERSIONING.md
lib/: audio-math.ts  constants.ts  file-io.ts  tauri.ts  types.ts  use-ab-test.ts  use-audio-status.ts  use-equalizer.ts
lib/__tests__/: audio-math.test.ts  file-io.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ab_test.rs  audio_monitor.rs  commands.rs  lib.rs  main.rs  profile.rs  tray.rs  types.rs
(+3 files in other folders)
